fdo#77315: When in cell edit mode, use the EditView instance already there.

trac#20518

This prevents creation of a temporary EditView instance which would mess up
the cursor state while the mouse pointer is hovering.

(cherry picked from commit df51f7d486cafb2795a38ae9fedd8fde8827d8a4)

Conflicts:
	sc/source/ui/view/gridwin.cxx

Change-Id: I7759667b105b4389dd4de2673cd2fbe32082c95d